# django-loginout-panel

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  testrunner.py  tox.ini
.github/workflows/: release.yml  tests.yml
demo/: README.md  app.py  manage.py
demo/demo_site/: settings.py  urls.py
demo/home/management/commands/: seed.py
demo/home/templates/home/: index.html
loginout_panel/: __init__.py  apps.py  panel.py  views.py
loginout_panel/templates/loginout_panel/: nav_subtitle.html  panel.html
tests/: settings.py  test_panel.py  test_views.py
