[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "django-loginout-panel"
version = "0.1.0"
description = "A Django Debug Toolbar panel that logs a configured user in or out with one click during development."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Andy Woods", email = "andytwoods@gmail.com" }]
keywords = ["django", "debug-toolbar", "development", "authentication"]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Topic :: Software Development :: Debuggers",
]
dependencies = [
    "Django>=5.2",
    "django-debug-toolbar>=6.0",
]

[project.optional-dependencies]
test = ["pytest", "pytest-django"]

[project.urls]
Homepage = "https://github.com/andytwoods/django-loginout-panel"
Source = "https://github.com/andytwoods/django-loginout-panel"

[tool.setuptools.packages.find]
include = ["loginout_panel*"]

[tool.setuptools.package-data]
loginout_panel = ["templates/loginout_panel/*.html"]
